# 3DInspectPost

./: CMakeLists.txt  README.md
include/: postorocessAPI.h  tools.h  type.h
src/: main.cpp  postProcessAPI.cpp  tools.cpp
testData/inferenceData/: _center.txt  _center_Z.txt  _cos.txt  _dim.txt  _hm.txt  _sin.txt  boxes.txt  scores.txt
testData/model_data/: _center.txt  _center_Z.txt  _cos.txt  _dim.txt  _hm.txt  _sin.txt  boxes.txt  labels.txt  scores.txt
tools/pythonCode/: read_write_numpy.py  visualPoincloud_and_Box.py
